--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
             <p>I'm excited at the opportunity to bring my technical expertise and passion for ethical technology to NAVEX I'd love to discuss
                 how my skills align with your Customer Interface Specialist role.</p><br/><br/>
 
-                <a href="https://portfolio.raeescodes.xyz" target="_blank" class="cta-button">
+                <a href="https://raeesnazeem.github.io/cover_letter/" target="_blank" class="cta-button">
                     <span>Portfolio</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                         stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
