--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">Portfolio</a></li>
             </ul>
         </nav>
     </header>
