--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                 <h1>Customer Interface Specialist</h1>
                 <p>Bringing passion, precision, and pixel-perfect code to NAVEX's mission of making the world a better
                     place.</p>
-                <a href="#contact" class="cta-button">
+                <a href="https://portfolio.raeescodes.xyz" class="cta-button">
                     <span>Let's Connect</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                         stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
